@@ -3,10 +3,12 @@ __all__ = ['Connection',
            'File',
            'IPv4',
            'List',
+           'String',
            'Sys']
 from Connection import *
 from Device     import *
 from File       import *
 from IPv4       import *
 from List       import *
+from String     import *
 from Sys        import *
